# nullith

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  smart_storage_system-4.md
.github/workflows/: deploy.yml
nullith-api/: .env.example  Cargo.toml  leapcell.yaml  vercel.json
nullith-api/src/: files.rs  files_path.rs  index.rs  logs.rs  main.rs  notes.rs  notes_key.rs  trash.rs  trash_id.rs
worker/: .env.example  .gitignore  Cargo.toml  package.json  schema.sql  wrangler.toml
worker/.github/workflows/: deploy.yml
worker/src/: auth.rs  error.rs  lib.rs  logging.rs  response.rs
worker/src/models/: mod.rs
worker/src/routes/: admin.rs  files.rs  mod.rs  notes.rs
worker/src/utils/: mod.rs
