[package]
name = "nullith-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio-postgres = "0.5"
percent-encoding = "2"
tower = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1