[package]
name = "nullith-worker"
version = "0.1.0"
edition = "2021"
description = "Nullith - Personal Cloud Worker"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true